[gd_scene load_steps=2 format=3 uid="uid://cxj67ur7mly5o"]

[ext_resource type="Script" uid="uid://ccuynnx2ahosa" path="res://test/loggie_test.gd" id="1_8h4mv"]

[node name="LoggieTest" type="Node2D"]
script = ExtResource("1_8h4mv")

[node name="UI" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -150.0
offset_right = 100.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Loggie Console Test Scene"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="StartLogsButton" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Start Continuous Logging"

[node name="SingleTestButton" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Single Test Burst"

[node name="ErrorTestButton" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Generate Errors"

[node name="ClearButton" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Stop All Logging"

[node name="HSeparator2" type="HSeparator" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="InstructionLabel" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Open Loggie Console to see output
Use minimize/restore features
Test filtering by domain and level"
horizontal_alignment = 1

[connection signal="pressed" from="UI/VBoxContainer/StartLogsButton" to="." method="_on_start_logs_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/SingleTestButton" to="." method="_on_single_test_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/ErrorTestButton" to="." method="_on_error_test_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/ClearButton" to="." method="_on_clear_pressed"]
